fix: error messages in dark mode

--- a/client/src/assets/styles/_color-themes.scss
+++ b/client/src/assets/styles/_color-themes.scss
@@ -78,6 +78,10 @@ html.dark-mode {
   }
   .error {
     color: theme-color("error");
+
+    p {
+      color: theme-color("error");
+    }
   }
   .error.forgotten-password-error {
     p {
